--- a/.gitignore
+++ b/.gitignore
@@ -127,3 +127,15 @@ dmypy.json
 
 # Pyre type checker
 .pyre/
+
+# Documents
+*.pdf
+*.doc
+*.docx
+*.odt
+*.xls
+*.xlsx
+*.ods
+*.ppt
+*.pptx
+*.odp
